--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
                         <img src="avatar/duc.jpg" alt="Nguyễn Thanh Đức">
                     </div>
                     <h2 class="member-name">Nguyễn Thanh Đức</h2>
-                    <p class="member-role">Fitness Coach | Motivator</p>
+                    <p class="member-role">Học sinh</p>
                 </div>
                 
                 <div class="member-info">
@@ -1207,3 +1207,4 @@
     </script>
 </body>
 </html>
+
