--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
             <div class="member-card">
                 <div class="member-header">
                     <div class="member-avatar">
-                        <img src="avatar8.jpg" alt="Trần Anh Hải">
+                        <img src="avatar/tranhai.jpg" alt="Trần Anh Hải">
                     </div>
                     <h2 class="member-name">Trần Anh Hải</h2>
                     <p class="member-role">Học sinh</p>
@@ -1207,4 +1207,5 @@
     </script>
 </body>
 </html>
+
 
